name:                haskell-servant-experiments
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-servant-experiments#readme
license:             PublicDomain
license-file:        LICENSE
author:              Greg Wiley
maintainer:          aztecrex@jammm.com
copyright:           Public Domain
category:            Experiment
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , WebApp
  build-depends:       base >= 4.7 && < 5
                     , text
                     , servant
  default-language:    Haskell2010

executable haskell-servant-experiments-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-servant-experiments
  default-language:    Haskell2010

test-suite haskell-servant-experiments-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-servant-experiments
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aztecrex/haskell-servant-experiments
